--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 asgiref==3.7.2
+crispy-bootstrap5==0.7
 Django==4.2.5
+django-crispy-forms==2.1
 mysqlclient==2.2.0
 python-dotenv==1.0.0
 sqlparse==0.4.4
 typing_extensions==4.8.0
 tzdata==2023.3
-crispy-bootstrap5
